tests/error_display/test_hll_loan_conflict_display.si

        fn f() {
            let mut x: i64 = 10;
            let r = &mut x;
            x = 20;
            let y = r.*;
        }
    